Squash and Merge /fix/table-classes

--- a/src/sections/storage-full.scss
+++ b/src/sections/storage-full.scss
@@ -1,6 +1,6 @@
 .storage-full,
 .storage-modal {
-  .table-2 {
+  .table {
     .folder,
     .file {
       &:before {
